--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: readky
-description: A new Flutter project.
+description: A modern Flutter News App Starter Template with updated dependencies.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -18,20 +18,36 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=3.2.0 <4.0.0"
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  chewie: ^1.2.2
-  cupertino_icons: ^1.0.2
-  flutter_svg: ^0.22.0
-  scroll_indicator: ^0.0.3
-  video_player: ^2.1.10
+
+  # Video player dependencies - updated to latest versions
+  chewie: ^1.8.5
+  video_player: ^2.9.2
+
+  # UI and icons
+  cupertino_icons: ^1.0.8
+  flutter_svg: ^2.0.12
+
+  # Additional modern dependencies for enhanced functionality
+  cached_network_image: ^3.4.1
+  http: ^1.2.2
+  shared_preferences: ^2.3.3
+  connectivity_plus: ^7.0.0
+
+  # State management (optional - uncomment if needed)
+  # provider: ^6.1.2
+  # bloc: ^8.1.4
+  # flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
